--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,8 +5,13 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+    <div class="titles">
+        <h1> Switch Cheat Code Dism </h1>
+        <h3> 大道至简 </h3>
+        <h5> 能用就行 </h5>
+    </div>
     <div class="container">
-        <textarea id="leftTextarea" placeholder="Paste or drag cheat txt here"></textarea>
+        <textarea id="leftTextarea" placeholder="Paste code or drag cheat txt here"></textarea>
         <textarea id="rightTextarea" placeholder=""></textarea>
     </div>
 
