--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -1,3 +1,8 @@
+.titles {
+    height: 10%;
+    text-align: center;
+}
+
 .multi-ce-area {
     height: 70%;
     display: flex;
@@ -5,16 +10,18 @@
 
 .log-area {
     height: 20%;
-    width: 95%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
     display: flex;
 }
 
 .ce-area {
-    width: 45%;
+    width: 50%;
     height: 100%; /* Set the height to match the parent container */
     margin: 0px;
-    resize: none; /* Disable textarea resizing */
-    overflow: auto; /* Add scrollbars when necessary */
+    display: flex;
 }
 
 #right-ce {
@@ -29,8 +36,7 @@ html, body {
     padding: 0;
 }
 
-h1,h2,h3,h4,h5 {
-    text-align: center;
+h1 {
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
